# gtk-c-demo

./: README.md  meson.build  org.gnome.Example.json
data/: org.gnome.Example.desktop.in  org.gnome.Example.gschema.xml
po/: POTFILES
src/: demo-application.c  demo-application.h  demo-window.c  demo-window.h  demo-window.ui  demo.gresource.xml  main.c  meson.build
